[gd_scene load_steps=9 format=3 uid="uid://ldrwgxrqjjg5"]

[ext_resource type="PackedScene" uid="uid://bamnjdr8d0t4a" path="res://gameplay/escenas/personajes/personaje.tscn" id="1_0t4ck"]
[ext_resource type="Script" uid="uid://dsctlvcrmcgdt" path="res://gameplay/scripts/partida.gd" id="1_pfv7k"]
[ext_resource type="PackedScene" uid="uid://8jm3q8oym0o1" path="res://gameplay/escenas/botones-jugador2.tscn" id="2_dkiol"]
[ext_resource type="PackedScene" uid="uid://6dkfhud14d5i" path="res://gameplay/escenas/botones-jugador1.tscn" id="2_mo80f"]
[ext_resource type="SpriteFrames" uid="uid://0dwdqstovsfh" path="res://gameplay/escenas/personajes/kirby.tres" id="5_pfv7k"]
[ext_resource type="PackedScene" uid="uid://dd36j1c11e0cl" path="res://barra_vida_2/escenas/barra.tscn" id="6_1eyvx"]
[ext_resource type="PackedScene" uid="uid://uhkfrl02c26l" path="res://timer/escenas/timer.tscn" id="7_hpts1"]
[ext_resource type="PackedScene" uid="uid://c3idsj77kmk8h" path="res://Fondo/auto_scroller.tscn" id="8_tihru"]

[node name="Partida" type="Node2D"]
script = ExtResource("1_pfv7k")

[node name="Botones" type="Node" parent="."]

[node name="Botones-personaje1" parent="Botones" instance=ExtResource("2_mo80f")]
position = Vector2(225, 624)

[node name="Botones-personaje2" parent="Botones" instance=ExtResource("2_dkiol")]
position = Vector2(805, 619)

[node name="Node2D" type="Node2D" parent="Botones"]
position = Vector2(998, 106)

[node name="Personajes" type="Node" parent="."]

[node name="Personaje1" parent="Personajes" node_paths=PackedStringArray("nodo_botones") instance=ExtResource("1_0t4ck")]
position = Vector2(487, 351)
scale = Vector2(1.2, 1.2)
nodo_botones = NodePath("../../Botones/Botones-personaje1")
nombre_personaje = &"Knuckles"

[node name="Personaje2" parent="Personajes" node_paths=PackedStringArray("nodo_botones") instance=ExtResource("1_0t4ck")]
position = Vector2(662, 359)
scale = Vector2(1.2, 1.2)
nodo_botones = NodePath("../../Botones/Botones-personaje2")
voltear_personaje = true
spriteframe = ExtResource("5_pfv7k")
nombre_personaje = &"Kirby"

[node name="BarrasVida" parent="." node_paths=PackedStringArray("personaje_1", "personaje_2") instance=ExtResource("6_1eyvx")]
personaje_1 = NodePath("../Personajes/Personaje1")
personaje_2 = NodePath("../Personajes/Personaje2")

[node name="Reloj" parent="." instance=ExtResource("7_hpts1")]
offset_left = 524.0
offset_top = 39.0
offset_right = 654.0
offset_bottom = 169.0
scale = Vector2(0.8, 0.8)

[node name="Fondo" type="ColorRect" parent="."]
show_behind_parent = true
offset_right = 1659.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.52549)

[node name="AutoScroller" parent="Fondo" instance=ExtResource("8_tihru")]
show_behind_parent = true
scale = Vector2(2.4, 2.4)

[connection signal="ha_atacado" from="Personajes/Personaje1" to="." method="_on_personaje_1_ha_atacado"]
[connection signal="ha_atacado" from="Personajes/Personaje2" to="." method="_on_personaje_2_ha_atacado"]
