[gd_scene load_steps=31 format=3 uid="uid://hn8a810btiqa"]

[ext_resource type="PackedScene" uid="uid://b5wqwx4kssvs3" path="res://juego/personajes/escenas/personaje.tscn" id="1_0t4ck"]
[ext_resource type="Script" uid="uid://dsctlvcrmcgdt" path="res://juego/gameplay/scripts/partida.gd" id="1_pfv7k"]
[ext_resource type="Shader" uid="uid://bwadeem3p20ga" path="res://juego/gameplay/shaders/partida.gdshader" id="2_3vs70"]
[ext_resource type="PackedScene" uid="uid://brhjyc538y1fr" path="res://menu/escenas/menus_superpuestos/menu_pausa.tscn" id="2_n78ns"]
[ext_resource type="AudioStream" uid="uid://dlj20q6oi3gh1" path="res://juego/Fondo/assets/musica/cyberpunk-street.ogg" id="3_htvet"]
[ext_resource type="Texture2D" uid="uid://dyhf76xqm1put" path="res://juego/gameplay/assets/cuadrado_blanco.jpg" id="3_y0x6b"]
[ext_resource type="AudioStream" uid="uid://bkt4qut06lw54" path="res://juego/gameplay/assets/sonidos/IMPACT METAL Short Slam_03(1).wav" id="4_62slp"]
[ext_resource type="AudioStream" uid="uid://csw1785mkew5f" path="res://juego/gameplay/assets/sonidos/Misc_Glass_Crystal_Shatter.wav" id="5_vv4sp"]
[ext_resource type="PackedScene" uid="uid://dd36j1c11e0cl" path="res://juego/hud/barra_personaje/escenas/barra.tscn" id="6_1eyvx"]
[ext_resource type="AudioStream" uid="uid://injih58332iy" path="res://juego/gameplay/assets/sonidos/WHOOSH AIR Steady Smooth_02.wav" id="6_vv4sp"]
[ext_resource type="AudioStream" uid="uid://cgk4l8gvvu0oo" path="res://juego/gameplay/assets/sonidos/round-1-fight_G_minor.wav" id="7_4spbw"]
[ext_resource type="PackedScene" uid="uid://uhkfrl02c26l" path="res://juego/hud/timer/escenas/timer.tscn" id="7_hpts1"]
[ext_resource type="PackedScene" uid="uid://d07l85r3exlen" path="res://juego/hud/botones/botones.tscn" id="7_htvet"]
[ext_resource type="Texture2D" uid="uid://kf8t7moxds3q" path="res://juego/gameplay/assets/Arrows.png" id="9_kklxi"]
[ext_resource type="FontFile" uid="uid://bokj4j165xofw" path="res://Assets/fuentes/Lambda-Regular.otf" id="10_s5joy"]
[ext_resource type="Shader" uid="uid://cptu6m8orjgbg" path="res://juego/gameplay/shaders/kaleido.gdshader" id="12_y0x6b"]
[ext_resource type="PackedScene" uid="uid://c3gm08djsemxe" path="res://menu/escenas/menus/menu_final_partida/escenas/menu_final.tscn" id="13_htvet"]
[ext_resource type="PackedScene" uid="uid://bflc0m33mw01y" path="res://menu/escenas/menus/menu_final_partida/escenas/menu_continuar.tscn" id="17_uhubh"]

[sub_resource type="Animation" id="Animation_kfnal"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mensajes/Block:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mensajes/Break:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Mensajes/Dodge:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 328)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Fondo/KaleidoRojo:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Fondo/KaleidoRosa:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_y0x6b"]
resource_name = "ataque_especial_p1"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6, 0.7),
"transitions": PackedFloat32Array(0.196146, 1, 1, 1),
"update": 0,
"values": [Vector2(576, 328), Vector2(444.71, 336), Vector2(444.71, 336), Vector2(576, 328)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1e-05, 0.196146, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.35, 1.35), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fondo/KaleidoRojo:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pausar_personajes"
}, {
"args": [],
"method": &"reanudar_personajes"
}]
}

[sub_resource type="Animation" id="Animation_a0wv1"]
resource_name = "ataque_especial_p2"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6, 0.7),
"transitions": PackedFloat32Array(0.196146, 1, 1, 1),
"update": 0,
"values": [Vector2(576, 328), Vector2(710, 343), Vector2(710, 343), Vector2(576, 328)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1e-05, 0.196146, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.35, 1.35), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pausar_personajes"
}, {
"args": [],
"method": &"reanudar_personajes"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Fondo/KaleidoRosa:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_tihru"]
resource_name = "bloquear"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.366667),
"transitions": PackedFloat32Array(0.196146, 0.143587, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pausar_personajes"
}, {
"args": [],
"method": &"reanudar_personajes"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mensajes/Block:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SFX")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 1.1817,
"start_offset": 0.2,
"stream": ExtResource("4_62slp")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_kklxi"]
resource_name = "escudo_roto"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(0.196146, 0.143587, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pausar_personajes"
}, {
"args": [],
"method": &"reanudar_personajes"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mensajes/Break:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SFX")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_vv4sp")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_s5joy"]
resource_name = "esquivar"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(0.196146, 0.143587, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pausar_personajes"
}, {
"args": [],
"method": &"reanudar_personajes"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mensajes/Dodge:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SFX")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.4384,
"stream": ExtResource("6_vv4sp")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_68yfh"]
resource_name = "presentacion"
length = 2.5
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SFX")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_4spbw")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"reanudar_personajes"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kfnal"]
_data = {
&"RESET": SubResource("Animation_kfnal"),
&"ataque_especial_p1": SubResource("Animation_y0x6b"),
&"ataque_especial_p2": SubResource("Animation_a0wv1"),
&"bloquear": SubResource("Animation_tihru"),
&"escudo_roto": SubResource("Animation_kklxi"),
&"esquivar": SubResource("Animation_s5joy"),
&"presentacion": SubResource("Animation_68yfh")
}

[sub_resource type="LabelSettings" id="LabelSettings_glmsc"]
font = ExtResource("10_s5joy")
font_size = 90

[sub_resource type="ShaderMaterial" id="ShaderMaterial_htvet"]
shader = ExtResource("12_y0x6b")
shader_parameter/animate_speed = 0.5
shader_parameter/resolution = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n78ns"]
shader = ExtResource("2_3vs70")
shader_parameter/fisheye_strength = 0.905

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vv4sp"]

[node name="Partida" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pfv7k")
escena_pausa = ExtResource("2_n78ns")
metadata/_edit_lock_ = true

[node name="TimerPoder" type="Timer" parent="."]
autostart = true

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_htvet")
autoplay = true
bus = &"Musica"

[node name="SFX" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kfnal")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 328)

[node name="Mensajes" type="Marker2D" parent="."]
z_index = 2
position = Vector2(571, 221)

[node name="Block" type="Label" parent="Mensajes"]
visible = false
offset_left = -102.0
offset_top = -57.0
offset_right = 130.0
offset_bottom = 58.0
text = "BLOCK!"
label_settings = SubResource("LabelSettings_glmsc")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Mensajes/Block"]
position = Vector2(102, 57)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_kklxi")
metadata/_edit_lock_ = true

[node name="Dodge" type="Label" parent="Mensajes"]
visible = false
offset_left = -102.0
offset_top = -57.0
offset_right = 130.0
offset_bottom = 58.0
text = "DODGE!"
label_settings = SubResource("LabelSettings_glmsc")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Mensajes/Dodge"]
position = Vector2(102, 57)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_kklxi")
metadata/_edit_lock_ = true

[node name="Break" type="Label" parent="Mensajes"]
visible = false
offset_left = -102.0
offset_top = -57.0
offset_right = 130.0
offset_bottom = 58.0
text = "BREAK!"
label_settings = SubResource("LabelSettings_glmsc")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Mensajes/Break"]
position = Vector2(102, 57)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_kklxi")
metadata/_edit_lock_ = true

[node name="Fondo" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Oscurecer" type="ColorRect" parent="Fondo"]
visibility_layer = 16
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.08, 0.576471)

[node name="KaleidoRojo" type="TextureRect" parent="Fondo"]
visible = false
modulate = Color(0.641733, 0, 0.203657, 1)
material = SubResource("ShaderMaterial_htvet")
layout_mode = 0
offset_right = 1154.0
offset_bottom = 646.0
texture = ExtResource("3_y0x6b")

[node name="KaleidoRosa" type="TextureRect" parent="Fondo"]
visible = false
modulate = Color(0.925117, 0.0909313, 0.887361, 1)
material = SubResource("ShaderMaterial_htvet")
layout_mode = 0
offset_right = 1154.0
offset_bottom = 646.0
texture = ExtResource("3_y0x6b")

[node name="Efectos" type="Control" parent="."]
z_index = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CRT" type="TextureRect" parent="Efectos"]
visible = false
material = SubResource("ShaderMaterial_n78ns")
layout_mode = 0
offset_right = 1150.0
offset_bottom = 646.0
texture = ExtResource("3_y0x6b")

[node name="HUD" type="Control" parent="."]
visibility_layer = 8
z_index = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BarrasVida" parent="HUD" node_paths=PackedStringArray("personaje_1", "personaje_2") instance=ExtResource("6_1eyvx")]
personaje_1 = NodePath("../../Personajes/BoxContainer/CenterContainer/Personaje1")
personaje_2 = NodePath("../../Personajes/BoxContainer/CenterContainer2/Personaje2")
metadata/_edit_lock_ = true

[node name="Reloj" parent="HUD" instance=ExtResource("7_hpts1")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 524.0
offset_top = 39.0
offset_right = 654.0
offset_bottom = 169.0
scale = Vector2(0.8, 0.8)
metadata/_edit_lock_ = true

[node name="Botones" parent="HUD" instance=ExtResource("7_htvet")]
layout_mode = 1

[node name="Personajes" type="MarginContainer" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_vv4sp")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -113.0
offset_right = 152.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="Personajes"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Personajes/BoxContainer"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 2

[node name="Personaje1" parent="Personajes/BoxContainer/CenterContainer" instance=ExtResource("1_0t4ck")]
unique_name_in_owner = true
layout_mode = 2
es_personaje_1 = true

[node name="CenterContainer2" type="CenterContainer" parent="Personajes/BoxContainer"]
custom_minimum_size = Vector2(80, 320)
layout_mode = 2

[node name="Personaje2" parent="Personajes/BoxContainer/CenterContainer2" instance=ExtResource("1_0t4ck")]
unique_name_in_owner = true
z_index = 1
layout_mode = 2

[node name="Pausa" type="Control" parent="."]
visible = false
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Final" type="Control" parent="."]
unique_name_in_owner = true
visible = false
z_index = 6
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuFinal" parent="Final" instance=ExtResource("13_htvet")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="MenuContinuar" parent="Final" instance=ExtResource("17_uhubh")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="timeout" from="TimerPoder" to="." method="_on_timer_poder_timeout"]
